--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -1,29 +1,9 @@
-@import "./variables.scss";
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
 
-.homepage{
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    .left-side{
-        border: 1px solid red;
-        height: 100vh;
-        width: 100%;
-        background:blue;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-       
-        .logo-wrapper{
-           
-           svg{
-              color: white;  
-           }
-        }
-    }
-     .right-side{
-        border: 1px solid  yellow;
-        height: 100vh;
-         width: 100%;
-    }
+.site-layout .site-layout-background {
+  background: #fff;
 }
