ft(staffs):manage staffs

--- a/src/components/dashboard/index.scss
+++ b/src/components/dashboard/index.scss
@@ -76,3 +76,14 @@ font-weight: bold;
 color: black;
 font-family: $poppins;
 }
+
+.staff-company-icon{
+   border-radius: 50% !important;
+  height: 7vh !important;
+  width: 7vh !important;
+}
+.staff-company-icon-big{
+   border-radius: 50% !important;
+  height: 10vh !important;
+  width: 10vh !important;
+}
