--- a/src/components/models/index.scss
+++ b/src/components/models/index.scss
@@ -34,6 +34,9 @@
     margin-right: 40%;
     margin-bottom: 15%;
     text-align: center;
+    height: 8vh !important;
+    width: 8vh !important;
+    border-radius: 50% !important;
   }
 }
 .rating-txt{
