--- a/src/styles/sass/variables.scss
+++ b/src/styles/sass/variables.scss
@@ -7,6 +7,7 @@ $main_blue : #1B27AF;
 $gray_color: #00349621;
 $light_gray_color: #ADB5FF;
 $cyan_color: #00FFEB;
+$red_color: rgb(206, 17, 38);
 
 //  font families
 
